syntax = "proto3";

package user_info;

option go_package = "shop-goframe-micro-service-refacotor/app/user/api/user_info/v1";


service UserInfo {
  // 管理员登录
  rpc Login (UserInfoLoginReq) returns (UserInfoLoginRes) {}
  // 管理员注册
  rpc Register (UserInfoRegisterReq) returns (UserInfoRegisterRes) {}
  // 修改密码
  rpc UpdatePassword (UserInfoUpdatePasswordReq) returns (UserInfoUpdatePasswordRes) {}
  // 管理员信息
  rpc GetUserInfo (UserInfoReq) returns (UserInfoRes) {}
}

// ========== 用户注册 ==========
message UserInfoRegisterReq {
  string name = 1;          // 用户名
  string avatar = 2;        // 头像
  string password = 3;      // 密码
  uint32 sex = 4;            // 1男 2女
  string sign = 5;          // 个性签名
  string secret_answer = 6; // 密保问题的答案
}

message UserInfoRegisterRes {
  uint32 id = 1; // 用户ID
}

// ========== 用户登录 ==========
message UserInfoLoginReq {
  string name = 1;      // 用户名
  string password = 2;  // 密码
}

message UserInfoLoginRes {
  string type = 1;      // token类型
  string token = 2;     // token字符串
  uint32 expire_in = 3;  // 过期时间(秒)
  UserInfoBase user_info = 4; // 用户基础信息
}

// ========== 用户信息 ==========
message UserInfoReq {
  uint32  id = 1;// 用户ID
}

message UserInfoRes {
  UserInfoBase user_info = 1; // 用户基础信息
}

// ========== 修改密码 ==========
message UserInfoUpdatePasswordReq {
  uint32  id = 1;// 用户ID
  string password = 2;       // 新密码
  string secret_answer = 3;  // 密保问题的答案
}

message UserInfoUpdatePasswordRes {
  uint32 id = 1; // 用户ID
}

// ========== 公共结构 ==========
message UserInfoBase {
  uint32 id = 1;     // 用户ID
  string name = 2;   // 用户名
  string avatar = 3; // 头像
  uint32 sex = 4;    // 性别
  string sign = 5;   // 个性签名
  uint32 status = 6; // 状态
}